--- a/user-server/src/main/resources/application.yml
+++ b/user-server/src/main/resources/application.yml
@@ -18,4 +18,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/,http://127.0.0.1:8762/eureka/,http://127.0.0.1:8763/eureka/
