--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,18 +1,23 @@
 server:
-  port: 8763
+  port: 8764
 eureka:
   instance:
     prefer-ip-address: true
-    instance-id: 127.0.0.1:8763
+    instance-id: 127.0.0.1:${server.port}
   client:
     # 是否将自己注册到Eureka Server 默认为true
     registerWithEureka: false
     # 是否从Eureka Server查询注册信息
     fetchRegistry: false
-    # 配置eureka服务的地址；多个使用英文逗号分开(集群的时候就不要在它自己的了)
+    # 配置eureka服务的地址；多个使用英文逗号分开(可以将它自己的配置上去，因为eureka会自动将它自己的地址移除掉)
     serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/,http://127.0.0.1:8762/eureka/,http://127.0.0.1:8763/eureka/
+      defaultZone: http://127.0.0.1:8763/eureka/
+  server:
+    response-cache-auto-expiration-in-seconds: 180
+    remote-region-registry-fetch-interval: 30
 spring:
+  application:
+    name: eureka
   cloud:
     loadbalancer:
       ribbon:
