--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>ribbon-template-b</module>
         <module>feign-template-a</module>
         <module>feign-template-b</module>
+        <module>hystrix-template-a</module>
+        <module>hystrix-template-b</module>
         <module>redis-template</module>
         <module>redis-template-rw</module>
         <module>redis-template-sentinel</module>
