hystrix 线程资源隔离示例

--- a/hystrix-template-a/src/main/resources/application.yml
+++ b/hystrix-template-a/src/main/resources/application.yml
@@ -1,5 +1,15 @@
 server:
   port: 8100
+  tomcat:
+    # 线程池配置
+    threads:
+      # 最大链接数
+      max: 5
+    # 最大等待数
+    accept-count: 0
+    # 最大链接数：这个参数是指在同一时间，tomcat能够接受的最大连接数。一般这个值要大于maxThreads+acceptCount
+    max-connections: 6
+
 spring:
   application:
     name: hystrix-server-a
@@ -11,6 +21,9 @@ eureka:
 feign:
   hystrix:
     enabled: true
+  httpclient:
+    connection-timeout: 20000
+  t
 management:
   endpoints:
     web:
