--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>gateway-server</module>
         <module>user-server</module>
         <module>train-server</module>
+        <module>hystrix-template-c</module>
     </modules>
     <packaging>pom</packaging>
     <name>spring-cloud-hoxton</name>
@@ -40,7 +41,7 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <springboot.version>2.3.4.RELEASE</springboot.version>
-        <fastjson.version>1.2.74</fastjson.version>
+        <fastjson.version>1.2.79</fastjson.version>
     </properties>
 
     <dependencyManagement>
