--- a/zuul-template-server-b/src/main/resources/application.yml
+++ b/zuul-template-server-b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8081
+  port: 8082
 spring:
   application:
-    name: server_a
+    name: server_b
 # 注册中心eureka配置
 eureka:
   client:
