feat: spring boot 3 使用示例

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <packaging>pom</packaging>
     <name>spring-demo</name>
     <description>spring全家桶学习教程</description>
+    <modules>
+        <module>springboot-simple-demo</module>
+    </modules>
 
 
 </project>
