--- a/parent-custom-demo/pom.xml
+++ b/parent-custom-demo/pom.xml
@@ -26,7 +26,7 @@
                 <!-- 从Spring Boot导入依赖关系管理 -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>3.1.4</version>
+                <version>3.1.5</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -41,6 +41,7 @@
     </dependencies>
     <build>
         <plugins>
+            <!--spring boot 打包工具-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
